@@ -2,7 +2,6 @@
 
 #include <algorithm>
 #include <fstream>
-#include <climits>
 #include <cstring>
 
 #include <bobcat/pattern>
