@@ -2,7 +2,7 @@
 
 #include <iostream>
 #include <cstdlib>
-#include <climits>
+#include <limits>
 #include <bobcat/errno>
 
 using namespace std;
