@@ -1,6 +1,7 @@
 #include "mbuf"
 
 #include <fstream>
+#include <limits>
 
 #include <bobcat/errno>
 
