@@ -2,5 +2,5 @@
 
 namespace FBB
 {
-    Mstream emsg(std::cout, UINT_MAX - 1,   "Error");
+    Mstream emsg(std::cout, numeric_limits<size_t>::max() - 1,   "Error");
 }
