@@ -2,5 +2,5 @@
 
 namespace FBB
 {
-    Mstream imsg(std::cout, UINT_MAX);
+    Mstream imsg(std::cout, numeric_limits<size_t>::max());
 }
