@@ -1,5 +1,6 @@
 #include "mstream"
 
+#include <limits>
 #include <bobcat/errno>
 
 using namespace std;
