@@ -18,6 +18,11 @@ ReadLineBuf::ReadLineBuf(string const &prompt, size_t historySize, Type type)
         if (type == EXPAND_HISTORY)
             d_readline = &ReadLineBuf::expandLine;
         using_history();
-        stifle_history(historySize > INT_MAX ? INT_MAX : historySize);
+        stifle_history(
+            historySize > static_cast<size_t>(numeric_limits<int>::max()) ? 
+                numeric_limits<int>::max() 
+                    : 
+                historySize
+        );
     }
 }
