@@ -1,6 +1,6 @@
 #include "selector"
 
-#include <climits>
+#include <limits>
 #include <bobcat/errno>
 
 using namespace std;
