@@ -15,6 +15,8 @@ bobcat (3.00.00)
   * The 'repeat' function template was improved, now perfectly forwarding 
     arguments to (member) functions repeatedly called by `repeat'.
 
+  * Replaced climits constants by limits const-expressions
+
   * Added TempStream creating a temporary fstream
 
 bobcat (2.22.00)
